Fixing an error where the modal popup would show up behind music div

--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ img {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   border: dashed 3px black;
+  position: relative;
+  z-index: 1000;
 }
 
 #entreeName {
